TxMark.Antlr/obj/Debug/MarkdownPreprocessorParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.5-SNAPSHOT
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\v-adai\Documents\Visual Studio 2015\Projects\TxMark\TxMark.Antlr\MarkdownPreprocessor.g4 by ANTLR 4.5-SNAPSHOT

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace TxMark.Compiler {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.5-SNAPSHOT")]
[System.CLSCompliant(false)]
public partial class MarkdownPreprocessorParser : Parser {
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, DIGITS=5, TAB=6, SPACE=7, CARRIAGE_RETURN=8, 
		NON_WHITESPACE=9;
	public const int
		RULE_document = 0, RULE_content = 1, RULE_line = 2, RULE_list = 3, RULE_listItem = 4, 
		RULE_indentedText = 5, RULE_listItemIndicator = 6, RULE_blockquote = 7, 
		RULE_blockquoteItem = 8, RULE_blockQuoteElement = 9, RULE_blockQuoteListItem = 10, 
		RULE_blockquoteIndicator = 11, RULE_heading = 12, RULE_headingIndicator = 13, 
		RULE_textLine = 14, RULE_paragraph_end = 15, RULE_text = 16, RULE_nonWhitespace = 17, 
		RULE_whitespace = 18, RULE_space = 19, RULE_tab = 20, RULE_carriageReturn = 21, 
		RULE_softCarriageReturn = 22, RULE_hardCarriageReturn = 23;
	public static readonly string[] ruleNames = {
		"document", "content", "line", "list", "listItem", "indentedText", "listItemIndicator", 
		"blockquote", "blockquoteItem", "blockQuoteElement", "blockQuoteListItem", 
		"blockquoteIndicator", "heading", "headingIndicator", "textLine", "paragraph_end", 
		"text", "nonWhitespace", "whitespace", "space", "tab", "carriageReturn", 
		"softCarriageReturn", "hardCarriageReturn"
	};

	private static readonly string[] _LiteralNames = {
		null, "'*'", "'.'", "'>'", "'#'", null, "'\t'", "' '"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, "DIGITS", "TAB", "SPACE", "CARRIAGE_RETURN", 
		"NON_WHITESPACE"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "MarkdownPreprocessor.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public MarkdownPreprocessorParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class DocumentContext : ParserRuleContext {
		public ContentContext content() {
			return GetRuleContext<ContentContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(MarkdownPreprocessorParser.Eof, 0); }
		public DocumentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_document; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMarkdownPreprocessorListener typedListener = listener as IMarkdownPreprocessorListener;
			if (typedListener != null) typedListener.EnterDocument(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMarkdownPreprocessorListener typedListener = listener as IMarkdownPreprocessorListener;
			if (typedListener != null) typedListener.ExitDocument(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMarkdownPreprocessorVisitor<TResult> typedVisitor = visitor as IMarkdownPreprocessorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDocument(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DocumentContext document() {
		DocumentContext _localctx = new DocumentContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_document);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 48; content();
			State = 49; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ContentContext : ParserRuleContext {
		public LineContext[] line() {
			return GetRuleContexts<LineContext>();
		}
		public LineContext line(int i) {
			return GetRuleContext<LineContext>(i);
		}
		public ContentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_content; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMarkdownPreprocessorListener typedListener = listener as IMarkdownPreprocessorListener;
			if (typedListener != null) typedListener.EnterContent(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMarkdownPreprocessorListener typedListener = listener as IMarkdownPreprocessorListener;
			if (typedListener != null) typedListener.ExitContent(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMarkdownPreprocessorVisitor<TResult> typedVisitor = visitor as IMarkdownPreprocessorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitContent(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ContentContext content() {
		ContentContext _localctx = new ContentContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_content);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 54;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__2) | (1L << T__3) | (1L << DIGITS) | (1L << TAB) | (1L << SPACE) | (1L << CARRIAGE_RETURN) | (1L << NON_WHITESPACE))) != 0)) {
				{
				{
				State = 51; line();
				}
				}
				State = 56;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LineContext : ParserRuleContext {
		public HeadingContext heading() {
			return GetRuleContext<HeadingContext>(0);
		}
		public CarriageReturnContext carriageReturn() {
			return GetRuleContext<CarriageReturnContext>(0);
		}
		public ListContext list() {
			return GetRuleContext<ListContext>(0);
		}
		public BlockquoteContext blockquote() {
			return GetRuleContext<BlockquoteContext>(0);
		}
		public TextLineContext textLine() {
			return GetRuleContext<TextLineContext>(0);
		}
		public Paragraph_endContext paragraph_end() {
			return GetRuleContext<Paragraph_endContext>(0);
		}
		public LineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_line; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMarkdownPreprocessorListener typedListener = listener as IMarkdownPreprocessorListener;
			if (typedListener != null) typedListener.EnterLine(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMarkdownPreprocessorListener typedListener = listener as IMarkdownPreprocessorListener;
			if (typedListener != null) typedListener.ExitLine(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMarkdownPreprocessorVisitor<TResult> typedVisitor = visitor as IMarkdownPreprocessorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLine(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LineContext line() {
		LineContext _localctx = new LineContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_line);
		try {
			State = 66;
			switch ( Interpreter.AdaptivePredict(_input,1,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 57; heading();
				State = 58; carriageReturn();
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 60; list();
				}
				break;

			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 61; blockquote();
				}
				break;

			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 62; textLine();
				State = 63; carriageReturn();
				}
				break;

			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 65; paragraph_end();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ListContext : ParserRuleContext {
		public ListItemContext[] listItem() {
			return GetRuleContexts<ListItemContext>();
		}
		public ListItemContext listItem(int i) {
			return GetRuleContext<ListItemContext>(i);
		}
		public CarriageReturnContext[] carriageReturn() {
			return GetRuleContexts<CarriageReturnContext>();
		}
		public CarriageReturnContext carriageReturn(int i) {
			return GetRuleContext<CarriageReturnContext>(i);
		}
		public IndentedTextContext[] indentedText() {
			return GetRuleContexts<IndentedTextContext>();
		}
		public IndentedTextContext indentedText(int i) {
			return GetRuleContext<IndentedTextContext>(i);
		}
		public ListContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_list; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMarkdownPreprocessorListener typedListener = listener as IMarkdownPreprocessorListener;
			if (typedListener != null) typedListener.EnterList(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMarkdownPreprocessorListener typedListener = listener as IMarkdownPreprocessorListener;
			if (typedListener != null) typedListener.ExitList(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMarkdownPreprocessorVisitor<TResult> typedVisitor = visitor as IMarkdownPreprocessorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitList(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ListContext list() {
		ListContext _localctx = new ListContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_list);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 74;
			_errHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					State = 74;
					switch (_input.La(1)) {
					case T__0:
					case DIGITS:
						{
						State = 68; listItem();
						State = 69; carriageReturn();
						}
						break;
					case TAB:
					case SPACE:
						{
						State = 71; indentedText();
						State = 72; carriageReturn();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 76;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,3,_ctx);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ListItemContext : ParserRuleContext {
		public TextContext text() {
			return GetRuleContext<TextContext>(0);
		}
		public ListItemIndicatorContext[] listItemIndicator() {
			return GetRuleContexts<ListItemIndicatorContext>();
		}
		public ListItemIndicatorContext listItemIndicator(int i) {
			return GetRuleContext<ListItemIndicatorContext>(i);
		}
		public WhitespaceContext[] whitespace() {
			return GetRuleContexts<WhitespaceContext>();
		}
		public WhitespaceContext whitespace(int i) {
			return GetRuleContext<WhitespaceContext>(i);
		}
		public ListItemContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_listItem; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMarkdownPreprocessorListener typedListener = listener as IMarkdownPreprocessorListener;
			if (typedListener != null) typedListener.EnterListItem(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMarkdownPreprocessorListener typedListener = listener as IMarkdownPreprocessorListener;
			if (typedListener != null) typedListener.ExitListItem(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMarkdownPreprocessorVisitor<TResult> typedVisitor = visitor as IMarkdownPreprocessorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitListItem(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ListItemContext listItem() {
		ListItemContext _localctx = new ListItemContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_listItem);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 82;
			_errHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					State = 78; listItemIndicator();
					State = 80;
					_la = _input.La(1);
					if (_la==TAB || _la==SPACE) {
						{
						State = 79; whitespace();
						}
					}

					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 84;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,5,_ctx);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber );
			State = 86; text();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IndentedTextContext : ParserRuleContext {
		public TextContext text() {
			return GetRuleContext<TextContext>(0);
		}
		public SpaceContext[] space() {
			return GetRuleContexts<SpaceContext>();
		}
		public SpaceContext space(int i) {
			return GetRuleContext<SpaceContext>(i);
		}
		public TabContext[] tab() {
			return GetRuleContexts<TabContext>();
		}
		public TabContext tab(int i) {
			return GetRuleContext<TabContext>(i);
		}
		public IndentedTextContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_indentedText; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMarkdownPreprocessorListener typedListener = listener as IMarkdownPreprocessorListener;
			if (typedListener != null) typedListener.EnterIndentedText(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMarkdownPreprocessorListener typedListener = listener as IMarkdownPreprocessorListener;
			if (typedListener != null) typedListener.ExitIndentedText(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMarkdownPreprocessorVisitor<TResult> typedVisitor = visitor as IMarkdownPreprocessorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIndentedText(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IndentedTextContext indentedText() {
		IndentedTextContext _localctx = new IndentedTextContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_indentedText);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 101;
			switch (_input.La(1)) {
			case TAB:
				{
				State = 89;
				_errHandler.Sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						State = 88; tab();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					State = 91;
					_errHandler.Sync(this);
					_alt = Interpreter.AdaptivePredict(_input,6,_ctx);
				} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber );
				}
				break;
			case SPACE:
				{
				State = 93; space();
				State = 94; space();
				State = 95; space();
				State = 97;
				_errHandler.Sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						State = 96; space();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					State = 99;
					_errHandler.Sync(this);
					_alt = Interpreter.AdaptivePredict(_input,7,_ctx);
				} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber );
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			State = 107;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==TAB || _la==SPACE) {
				{
				State = 105;
				switch (_input.La(1)) {
				case TAB:
					{
					State = 103; tab();
					}
					break;
				case SPACE:
					{
					State = 104; space();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				State = 109;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			State = 110; text();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ListItemIndicatorContext : ParserRuleContext {
		public ITerminalNode DIGITS() { return GetToken(MarkdownPreprocessorParser.DIGITS, 0); }
		public ListItemIndicatorContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_listItemIndicator; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMarkdownPreprocessorListener typedListener = listener as IMarkdownPreprocessorListener;
			if (typedListener != null) typedListener.EnterListItemIndicator(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMarkdownPreprocessorListener typedListener = listener as IMarkdownPreprocessorListener;
			if (typedListener != null) typedListener.ExitListItemIndicator(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMarkdownPreprocessorVisitor<TResult> typedVisitor = visitor as IMarkdownPreprocessorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitListItemIndicator(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ListItemIndicatorContext listItemIndicator() {
		ListItemIndicatorContext _localctx = new ListItemIndicatorContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_listItemIndicator);
		try {
			State = 115;
			switch (_input.La(1)) {
			case T__0:
				EnterOuterAlt(_localctx, 1);
				{
				State = 112; Match(T__0);
				}
				break;
			case DIGITS:
				EnterOuterAlt(_localctx, 2);
				{
				State = 113; Match(DIGITS);
				State = 114; Match(T__1);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockquoteContext : ParserRuleContext {
		public BlockquoteItemContext[] blockquoteItem() {
			return GetRuleContexts<BlockquoteItemContext>();
		}
		public BlockquoteItemContext blockquoteItem(int i) {
			return GetRuleContext<BlockquoteItemContext>(i);
		}
		public CarriageReturnContext[] carriageReturn() {
			return GetRuleContexts<CarriageReturnContext>();
		}
		public CarriageReturnContext carriageReturn(int i) {
			return GetRuleContext<CarriageReturnContext>(i);
		}
		public IndentedTextContext[] indentedText() {
			return GetRuleContexts<IndentedTextContext>();
		}
		public IndentedTextContext indentedText(int i) {
			return GetRuleContext<IndentedTextContext>(i);
		}
		public BlockquoteContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_blockquote; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMarkdownPreprocessorListener typedListener = listener as IMarkdownPreprocessorListener;
			if (typedListener != null) typedListener.EnterBlockquote(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMarkdownPreprocessorListener typedListener = listener as IMarkdownPreprocessorListener;
			if (typedListener != null) typedListener.ExitBlockquote(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMarkdownPreprocessorVisitor<TResult> typedVisitor = visitor as IMarkdownPreprocessorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlockquote(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BlockquoteContext blockquote() {
		BlockquoteContext _localctx = new BlockquoteContext(_ctx, State);
		EnterRule(_localctx, 14, RULE_blockquote);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 123;
			_errHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					State = 123;
					switch (_input.La(1)) {
					case T__2:
						{
						State = 117; blockquoteItem();
						State = 118; carriageReturn();
						}
						break;
					case TAB:
					case SPACE:
						{
						State = 120; indentedText();
						State = 121; carriageReturn();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 125;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,13,_ctx);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockquoteItemContext : ParserRuleContext {
		public BlockQuoteElementContext blockQuoteElement() {
			return GetRuleContext<BlockQuoteElementContext>(0);
		}
		public BlockquoteIndicatorContext[] blockquoteIndicator() {
			return GetRuleContexts<BlockquoteIndicatorContext>();
		}
		public BlockquoteIndicatorContext blockquoteIndicator(int i) {
			return GetRuleContext<BlockquoteIndicatorContext>(i);
		}
		public WhitespaceContext[] whitespace() {
			return GetRuleContexts<WhitespaceContext>();
		}
		public WhitespaceContext whitespace(int i) {
			return GetRuleContext<WhitespaceContext>(i);
		}
		public BlockquoteItemContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_blockquoteItem; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMarkdownPreprocessorListener typedListener = listener as IMarkdownPreprocessorListener;
			if (typedListener != null) typedListener.EnterBlockquoteItem(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMarkdownPreprocessorListener typedListener = listener as IMarkdownPreprocessorListener;
			if (typedListener != null) typedListener.ExitBlockquoteItem(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMarkdownPreprocessorVisitor<TResult> typedVisitor = visitor as IMarkdownPreprocessorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlockquoteItem(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BlockquoteItemContext blockquoteItem() {
		BlockquoteItemContext _localctx = new BlockquoteItemContext(_ctx, State);
		EnterRule(_localctx, 16, RULE_blockquoteItem);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 131;
			_errHandler.Sync(this);
			_la = _input.La(1);
			do {
				{
				{
				State = 127; blockquoteIndicator();
				State = 129;
				switch ( Interpreter.AdaptivePredict(_input,14,_ctx) ) {
				case 1:
					{
					State = 128; whitespace();
					}
					break;
				}
				}
				}
				State = 133;
				_errHandler.Sync(this);
				_la = _input.La(1);
			} while ( _la==T__2 );
			State = 135; blockQuoteElement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockQuoteElementContext : ParserRuleContext {
		public HeadingContext heading() {
			return GetRuleContext<HeadingContext>(0);
		}
		public BlockQuoteListItemContext blockQuoteListItem() {
			return GetRuleContext<BlockQuoteListItemContext>(0);
		}
		public TextLineContext textLine() {
			return GetRuleContext<TextLineContext>(0);
		}
		public BlockQuoteElementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_blockQuoteElement; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMarkdownPreprocessorListener typedListener = listener as IMarkdownPreprocessorListener;
			if (typedListener != null) typedListener.EnterBlockQuoteElement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMarkdownPreprocessorListener typedListener = listener as IMarkdownPreprocessorListener;
			if (typedListener != null) typedListener.ExitBlockQuoteElement(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMarkdownPreprocessorVisitor<TResult> typedVisitor = visitor as IMarkdownPreprocessorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlockQuoteElement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BlockQuoteElementContext blockQuoteElement() {
		BlockQuoteElementContext _localctx = new BlockQuoteElementContext(_ctx, State);
		EnterRule(_localctx, 18, RULE_blockQuoteElement);
		try {
			State = 140;
			switch ( Interpreter.AdaptivePredict(_input,16,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 137; heading();
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 138; blockQuoteListItem();
				}
				break;

			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 139; textLine();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockQuoteListItemContext : ParserRuleContext {
		public TextContext text() {
			return GetRuleContext<TextContext>(0);
		}
		public ListItemIndicatorContext[] listItemIndicator() {
			return GetRuleContexts<ListItemIndicatorContext>();
		}
		public ListItemIndicatorContext listItemIndicator(int i) {
			return GetRuleContext<ListItemIndicatorContext>(i);
		}
		public WhitespaceContext[] whitespace() {
			return GetRuleContexts<WhitespaceContext>();
		}
		public WhitespaceContext whitespace(int i) {
			return GetRuleContext<WhitespaceContext>(i);
		}
		public BlockQuoteListItemContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_blockQuoteListItem; } }
		public override void EnterRule(IParseTreeListener listener) {
			IMarkdownPreprocessorListener typedListener = listener as IMarkdownPreprocessorListener;
			if (typedListener != null) typedListener.EnterBlockQuoteListItem(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IMarkdownPreprocessorListener typedListener = listener as IMarkdownPreprocessorListener;
			if (typedListener != null) typedListener.ExitBlockQuoteListItem(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMarkdownPreprocessorVisitor<TResult> typedVisitor = visitor as IMarkdownPreprocessorVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlockQuoteListItem(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BlockQuoteListItemContext blockQuoteListItem() {
		BlockQuoteListItemContext _localctx = new BlockQuoteListItemContext(_ctx, State);
		EnterRule(_localctx, 20, RULE_blockQuoteListItem);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 146;
			_errHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					State = 142; listItemIndicator();
					State = 144;
					_la = _input.La(1);
					if (_la==TAB || _la==SPACE) {
						{
						State = 143; whitespace();
						}
					}

					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 148;
				_errHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(_input,18,_ctx);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.InvalidAltNumber );
			State = 150; text();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockquoteIndicatorContext : ParserRuleContext {
